--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/stayout
+spring.datasource.url=jdbc:postgresql://localhost:5432/invoicify
 spring.datasource.username=invoicify
 spring.datasource.password=invoicify
 spring-jpa-hibernate.ddl-auto=create
